# mango

./: .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  uv.toml
backend/: .flake8  README.md  app.py  cdk.json  pytest.ini  requirements-dev.txt  requirements.txt
config/: beta.json  prod.json
docs/: ARCHITECTURE.md  AUTH_PROVIDERS_SETUP.md  BACKEND.md  DATA_MODEL.md  DEPLOY.md  DEPLOY_WITH_CLAUDE_CODE.md  DESIGN_SYSTEM.md  GAMIFICATION.md  OPERATIONS.md  PRODUCT_ROADMAP.md  ROADMAP.md  RUN_ON_IPHONE.md
infrastructure/: app.py  cdk.json  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
ios/: .swiftlint.yml  ExportOptions.plist  README.md  project.yml
scripts/: setup.sh
working/: 0008-product-reframe-activity-first.md  0009-catalog-expansion-100-books.md  0010-onboarding-redesign.md  0011-navigation-and-activity-interaction.md  0012-app-icon-redesign.md  0013-design-system-iconography-gamification.md  0014-progress-sync.md  0015-analytics-events-ios.md  0016-insight-review.md  0017-pdf-background-parsing.md  0018-epub-import.md  0019-native-apple-signin.md  0020-feature-store-personalization.md  0021-social-leagues.md  0022-app-store-prep.md  0023-payments-and-credits.md  0024-rewards-and-coupons.md  0025-notifications.md  0026-server-side-activity-achievement-tracking.md  0027-generation-artifact-store-observability.md  0028-shared-book-roadmap-cache.md  0030-ai-safety-guardrails.md  (+28 more)
(+171 files in other folders)
